<resources>
    <string name="app_name">ToBooks</string>
    <string name="login">Почта или телефон</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="sign_in_successful">Добро пожаловать!</string>
    <string name="sign_in_error">Ошибка входа</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_up_successful">Регистрация прошла успешна</string>
    <string name="sign_up_error">Ошибка регистрации</string>
    <string name="upload">Загрузить</string>
    <string name="search">Поиск</string>
    <string name="upload_btn_text">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="select_category">Выбрать категорию</string>
    <string name="enter_the_name">Введите имя папки</string>
    <string name="create_subcategory">Создать подкатегорию</string>
    <string name="set_upload_file">Выберите файл</string>
    <string name="download">Скачать</string>
    <string name="select">Выбрать</string>
    <string name="create">Создать</string>
    <string name="send_link_to_your_mail">Вам на почту отправлена ссылка!</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="error_uploading">Ошибка загрузки</string>
    <string name="select_action">Выберите действие</string>
    <string name="downloading">Скачивание</string>
    <string name="enter_the_email">Введите почту</string>
    <string name="reset_password">Восстановление пароля</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="send">Отправить</string>
    <string name="enter_correct_email">Введите корректный email</string>
    <string name="books">Книги</string>
    <string name="audio_books">Аудиокниги</string>
    <string name="help_to_books">Обратная связь</string>
    <string name="subject_message">Тема сообщения</string>
    <string name="text_message">Ваше сообщение</string>
    <string name="send_with">Отправить с помощью</string>
    <string name="invalid_number_format">Введите корректный номер в формате(+79000000000)</string>
    <string name="more_requests_try_again_later">Слишком много запросов, попробуйте позже</string>
    <string name="sms_code_message">На Ваш номер отправлен код с потдверждением</string>
    <string name="sms">SMS-код</string>
    <string name="market">Книжный рынок</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="not_connected">Нет подключения к сети!</string>
    <string name="confirm_number">Подтверждение номера</string>
    <string name="enter_the_code_from_sms">Введите код из sms</string>
    <string name="confirm">Подтвердить</string>
    <string name="book_name">Название</string>
    <string name="author_name">Имя автора</string>
    <string name="login_from_splash">Войти</string>
    <string name="begin">Начать</string>
</resources>