<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgAudio"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInLayoutAudioAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/author_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAudio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAudioAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInLayoutAudioName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/book_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tInLayoutAudioAuthor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAudioName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_done_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSelectImageBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imgAudio"
        app:layout_constraintEnd_toEndOf="@+id/imgAudio"
        app:layout_constraintStart_toEndOf="@+id/imgAudio"
        app:layout_constraintTop_toTopOf="@+id/imgAudio"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSelectedFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:maxEms="18"
        android:text="@string/set_upload_file"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectFile"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectFile"
        app:layout_constraintStart_toStartOf="@+id/tInLayoutAudioName"
        app:layout_constraintTop_toTopOf="@+id/btnSelectFile" />

    <Button
        android:id="@+id/btnSelectFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="@+id/tInLayoutAudioName"
        app:layout_constraintTop_toBottomOf="@+id/tInLayoutAudioName" />

    <ProgressBar
        android:id="@+id/pbUploadLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectFile"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
